--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       CONCOURSE_POSTGRES_PASSWORD:    concourse_postgres_pass
       CONCOURSE_POSTGRES_DATABASE:    concourse
       CONCOURSE_EXTERNAL_URL:         http://127.0.0.1:8080
-      CONCOURSE_ADD_LOCAL_USER:       admin:admin
+      CONCOURSE_ADD_LOCAL_USER:       admin:admin,user1:user1,guest:guest
       CONCOURSE_MAIN_TEAM_LOCAL_USER: admin
 
   concourse-worker:
