--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       POSTGRES_PASSWORD: concourse_postgres_pass
       POSTGRES_DB:       concourse
       PGDATA:            /database
+    networks:
+      - concourse
 
   concourse-web:
     image: concourse/concourse:5.1.0
@@ -30,19 +32,21 @@ services:
       CONCOURSE_EXTERNAL_URL:         http://127.0.0.1:8080
       CONCOURSE_ADD_LOCAL_USER:       admin:admin,user1:user1,guest:guest
       CONCOURSE_MAIN_TEAM_LOCAL_USER: admin
+    networks:
+      - concourse
 
   concourse-worker:
     image: concourse/concourse:5.1.0
     command: worker
     privileged: true
-    links:
-      - concourse-web
     depends_on:
       - concourse-web
     volumes:
       - ./concourse-keys/worker:/concourse-keys
     environment:
       CONCOURSE_TSA_HOST: concourse-web:2222
+    networks:
+      - concourse
 
   minio:
     image: minio/minio:latest
@@ -55,6 +59,12 @@ services:
       MINIO_REGION: ap-northeast-1
       MINIO_ACCESS_KEY: minio_access_key
       MINIO_SECRET_KEY: minio_secret_key
+    networks:
+      - concourse
+
+networks:
+  concourse:
+    driver: bridge
 
 volumes:
   concourse-db:
